<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.jaschke.alexandria.AddBook"
    android:layout_marginTop="30dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:id="@+id/eancontainer"
        android:layout_height="wrap_content"
        android:weightSum="4">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minEms="@integer/ean_width"
                android:id="@+id/ean"
                android:saveEnabled="true"
                android:maxLength="@integer/ean_size"
                android:maxLines="1"
                android:hint="@string/input_hint" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_button"
            android:id="@+id/scan_button"
            android:layout_weight="1" />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bookTitle"
        android:textSize="@dimen/head_line"
        android:textIsSelectable="true"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
     />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bookSubTitle"
        android:layout_marginTop="10dp"
        android:maxLines="3"
        android:ellipsize="end"
       />



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="100dp"
            android:maxHeight="150dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:id="@+id/bookCover"
            android:contentDescription="@string/book_cover"
            android:adjustViewBounds="true"
            android:layout_weight="1"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/authors"
                android:gravity="end"
                android:textSize="@dimen/small_fontsize"
                android:layout_marginTop="20dp"
               />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/categories"
                android:textSize="@dimen/small_fontsize"
                android:layout_marginTop="20dp"
             />

            </LinearLayout>
        </LinearLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
           >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/cancel_button"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/delete_button"
                android:drawableLeft="@drawable/ic_action_discard"
                android:visibility="invisible"
                 />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/ok_button"
                android:visibility="invisible"
                android:layout_weight="1"
                android:id="@+id/save_button"
                android:drawableLeft="@drawable/ic_action_accept"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_gravity="bottom" />

        </LinearLayout>
        </LinearLayout>


</LinearLayout>